Add the RecyclerView to the PostsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Postbook Challenge</string>
     <string name="login_userIdHint">UserId</string>
     <string name="login_loginButton">Login</string>
+    <string name="posts_title">My Posts</string>
 </resources>
