Add empty PostCommentsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login_userIdHint">UserId</string>
     <string name="login_loginButton">Login</string>
     <string name="posts_title">My Posts</string>
+    <string name="postComments_title">Comments</string>
 </resources>
